--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ p {
     .container-flex {
         margin: 0 auto;
         width: 100%;
-        height: auto;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -331,6 +331,10 @@ p {
 
 
 @media only screen and (max-width: 375px) {
+    
+    .container-flex {
+        height: auto;
+    }
 
     .left-graphic {
         position: absolute;
