--- a/style.css
+++ b/style.css
@@ -334,6 +334,8 @@ p {
 
     .container-flex {
         height: auto;
+        align-items: flex-start;
+        position: relative;
     }
 
     .left-graphic {
